--- a/frontend/web/src/routes/index.less
+++ b/frontend/web/src/routes/index.less
@@ -7,7 +7,16 @@
 .content {
   background-color: black;
   color: @font-color;
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  >div{
+    flex:1;
+  }
 }
+
+
 
 .footer,
 .header {
