--- a/frontend/web/src/components/shared/clickable/clickable.less
+++ b/frontend/web/src/components/shared/clickable/clickable.less
@@ -8,6 +8,7 @@
     cursor: pointer;
 
     &:hover{
-        font-weight: bolder;
+        // font-weight: bolder;
+        font-style: italic;
     }
 }
