--- a/frontend/web/src/components/windows/window/window.less
+++ b/frontend/web/src/components/windows/window/window.less
@@ -15,14 +15,10 @@
   padding-left: 10px;
   padding-right: 5px;
   border-bottom: 1px solid @border-color;
+  cursor: pointer;
 }
 
 .content{
   flex: 1;
-  display: flex;
-
-  :only-child{
-    flex: 1;
-  }
 }
 
