--- a/frontend/web/src/components/shared/tips/tips.less
+++ b/frontend/web/src/components/shared/tips/tips.less
@@ -1,19 +1,24 @@
+.tips {
+    padding: 0;
 
+    :global {
+        .ant-popover-arrow {
+            display: none;
+        }
+        .ant-popover-inner {
+            background-color: #00000000;
+            border: none;
+            border-radius: 0;
+            padding: 0;
+            color: white;
 
-.tips{
-    background-color: black;
-    border: 1px solid grey;
-
-    .ant-popover-content{
-        .ant-popover-inner{
-            .ant-popover-inner-content{
-                background-color: black;
-                border: 1px solid grey;
+            .ant-popover-inner-content {
+                background-color: #00000000;
+                border: none;
                 border-radius: 0;
-                padding: 2px;
+                padding: 0;
             }
         }
+
     }
-
 }
-
