下一步计划的几个组件

--- a/frontend/web/src/components/shared/item/item.less
+++ b/frontend/web/src/components/shared/item/item.less
@@ -1,9 +1,15 @@
-
-
-.legend{
-    color:darkgoldenrod;
+.legend {
+  color: darkgoldenrod;
 }
 
-.normal{
-    color:white;
+.epic {
+  color: purple;
+}
+
+.magic {
+  color: lightblue;
+}
+
+.normal {
+  color: white;
 }
