--- a/frontend/web/src/components/shared/clickable/clickable.less
+++ b/frontend/web/src/components/shared/clickable/clickable.less
@@ -1,14 +1,16 @@
-.clickable{
-    text-decoration: underline;
-    padding: 0 3px;
-    height: 25px;
-    line-height: 25px;
-    font-size: 14px;
-    display: inline-block;
-    cursor: pointer;
+.clickable {
+  border-bottom: 1px solid;
+  padding: 0;
+  margin: 0 3px;
+  height: 16px;
+  line-height: 15px;
+  font-size: 14px;
+  display: inline-block;
+  cursor: pointer;
+  user-select: none;
 
-    &:hover{
-        // font-weight: bolder;
-        font-style: italic;
-    }
+  &:hover {
+    // font-weight: bolder;
+    font-style: italic;
+  }
 }
