--- a/frontend/web/src/components/shared/operations/operations.less
+++ b/frontend/web/src/components/shared/operations/operations.less
@@ -1,22 +1,25 @@
 .operations {
-    padding: 0;
+  padding: 0;
 
-    :global {
-        .ant-popover-arrow {
-            display: none;
-        }
-        .ant-popover-inner-content {
-            background-color: black;
-            border: 1px solid grey;
-            border-radius: 0;
-            padding: 2px;
-            color: white;
-
-
-        }
+  :global {
+    .ant-popover-arrow {
+      display: none;
     }
+
+    .ant-popover-inner-content {
+      background-color: black;
+      border: 1px solid grey;
+      border-radius: 0;
+      padding: 2px;
+      color: #aaaaaa;
+    }
+  }
 }
 
-.action{
-    cursor: pointer;
+.action {
+  cursor: pointer;
+
+  &:hover {
+    color: #eeeeee;
+  }
 }
