--- a/frontend/web/src/components/label/gear/gear.less
+++ b/frontend/web/src/components/label/gear/gear.less
@@ -1,11 +1,11 @@
 .tips{
     width: 200px;
-    background-color: black;
-    border: 1px solid gray;
     color: white;
+    // font-size: 13px;
 
     .oneLine{
-        height: 30px;
+        height: 16px;
+        line-height: 16px;
         display: flex;
         align-items: center;
     }
