--- a/frontend/web/src/components/label/spendable/spendable.less
+++ b/frontend/web/src/components/label/spendable/spendable.less
@@ -1,7 +1,7 @@
 .tips {
   width: 200px;
-  background-color: black;
-  border: 1px solid gray;
+  // background-color: black;
+  // border: 1px solid gray;
   color: white;
 
   .oneLine {
