--- a/frontend/web/src/components/label/attribute/attribute.less
+++ b/frontend/web/src/components/label/attribute/attribute.less
@@ -1,7 +1,7 @@
 .tips {
   width: 200px;
-  background-color: black;
-  border: 1px solid gray;
+  // background-color: black;
+  // border: 1px solid gray;
   color: white;
 
   .oneLine {
@@ -31,6 +31,7 @@
   }
 }
 
-.statement {
+.attribute {
+  margin:0 5px;
   display: inline-block;
 }
