--- a/frontend/web/src/components/shared/tips/tips.less
+++ b/frontend/web/src/components/shared/tips/tips.less
@@ -7,10 +7,10 @@
     }
 
     .ant-popover-inner {
-      background-color: #00000000;
-      border: none;
+      background-color: #00000098;
+      border: 1px solid gray;
       border-radius: 0;
-      padding: 0;
+      padding: 2px;
       color: white;
 
       .ant-popover-inner-content {
@@ -18,6 +18,7 @@
         border: none;
         border-radius: 0;
         padding: 0;
+        font-size: 13px;
       }
     }
   }
