1.现在窗口关闭打开后还在原来位置 2.加了log显示 3.地图

--- a/frontend/web/src/components/label/character/character.less
+++ b/frontend/web/src/components/label/character/character.less
@@ -12,19 +12,8 @@
     .oneLine();
   }
 
-  .type {
-    .oneLine();
-    justify-content: space-between;
-  }
-
-  .effects {
-    div {
-      .oneLine()
-    }
-  }
-
   .description {
     padding: 5px;
-    color: goldenrod;
+    color: #999999;
   }
 }
