--- a/frontend/web/src/components/game/information/information.less
+++ b/frontend/web/src/components/game/information/information.less
@@ -1,6 +1,8 @@
 .logs {
   width: 300px;
-  height: 325px;
+  // height: 325px;
+  display: flex;
+  flex-direction: column-reverse;
   position: absolute;
   bottom: 0;
   margin-bottom: 10px;
