--- a/frontend/web/src/components/game/information/information.less
+++ b/frontend/web/src/components/game/information/information.less
@@ -7,9 +7,14 @@
   bottom: 0;
   margin-bottom: 10px;
   margin-left: 10px;
-  color: green;
   font-size: 12px;
   background-image: linear-gradient(0deg, green 90%, black 100%);
   -webkit-background-clip: text;
   color: transparent;
+
+  div {
+    &::selection {
+      color: green;
+    }
+  }
 }
