--- a/frontend/web/src/components/label/gear/gear.less
+++ b/frontend/web/src/components/label/gear/gear.less
@@ -1,30 +1,30 @@
-// .tips {
-//   width: 200px;
-//
-//   .oneLine {
-//     height: 16px;
-//     line-height: 16px;
-//     display: flex;
-//     align-items: center;
-//   }
-//
-//   .name {
-//     .oneLine();
-//   }
-//
-//   .type {
-//     .oneLine();
-//     justify-content: space-between;
-//   }
-//
-//   .effects {
-//     div {
-//       .oneLine()
-//     }
-//   }
-//
-//   .description {
-//     padding: 5px;
-//     color: goldenrod;
-//   }
-// }
+.tips {
+  width: 200px;
+
+  .oneLine {
+    height: 16px;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+  }
+
+  .name {
+    .oneLine();
+  }
+
+  .type {
+    .oneLine();
+    justify-content: space-between;
+  }
+
+  .effects {
+    div {
+      .oneLine()
+    }
+  }
+
+  .description {
+    padding: 5px;
+    color: goldenrod;
+  }
+}
