--- a/frontend/web/src/components/shared/field/field.less
+++ b/frontend/web/src/components/shared/field/field.less
@@ -1,3 +1,8 @@
+.invalid {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
 .field {
   @smallBorder: solid 1px #aaaaaa;
   display: inline-block;
@@ -11,14 +16,25 @@
     }
   }
 
-  .insert {
+  .center {
+    min-width: 50px;
     height: 25px;
     line-height: 25px;
     padding: 0 2px;
+  }
+
+  .insert {
+    .center();
 
     > div {
       border: none;
     }
+  }
+
+  .name {
+    .center();
+    text-align: center;
+    opacity: 0.6;
   }
 
   .corner {
