--- a/frontend/web/src/components/windows/window/window.less
+++ b/frontend/web/src/components/windows/window/window.less
@@ -1,4 +1,5 @@
 @border-color:grey;
+@titleBarHeight:30px;
 
 .window {
   border: 2px @border-color solid;
@@ -20,6 +21,6 @@
 }
 
 .content{
-  flex: 1;
+  height: calc(~'100%' - @titleBarHeight);
 }
 
