init: backend service

--- a/frontend/web/src/components/label/gear/gear.less
+++ b/frontend/web/src/components/label/gear/gear.less
@@ -15,6 +15,7 @@
     width: 200px;
     background-color: #000000dd;
     border: 1px solid #777777;
+    padding: 3px;
 
     .oneLine {
       height: 16px;
