--- a/frontend/web/src/components/windows/gear/gear.less
+++ b/frontend/web/src/components/windows/gear/gear.less
@@ -1,5 +1,10 @@
-.list{
+.list {
     display: flex;
     align-items: flex-start;
     flex-wrap: wrap;
+}
+
+.gearWindow {
+    width: 200px;
+    height: 320px;
 }
