--- a/frontend/web/src/components/windows/inventory/inventory.less
+++ b/frontend/web/src/components/windows/inventory/inventory.less
@@ -1,5 +1,11 @@
+
 .list {
-  display: flex;
-  flex-wrap: wrap;
-  height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+}
+
+.inventoryWindow {
+    width: 400px;
+    height: 160px;
 }
