--- a/frontend/web/src/components/game/information/information.less
+++ b/frontend/web/src/components/game/information/information.less
@@ -1,6 +1,7 @@
 .logs {
   width: 300px;
   // height: 325px;
+  z-index: 50;
   display: flex;
   flex-direction: column-reverse;
   position: absolute;
