--- a/frontend/web/src/components/label/attribute/attribute.less
+++ b/frontend/web/src/components/label/attribute/attribute.less
@@ -1,29 +1,32 @@
 .tips {
-  width: 200px;
+    width: 100px;
+    background-color: #000000dd;
+    border: 1px solid #aaaaaaee;
+    padding:0 5px;
 
-  .oneLine {
-    height: 30px;
-    display: flex;
-    align-items: center;
-  }
-
-  .name {
-    .oneLine();
-  }
-
-  .effects {
-    div {
-      .oneLine()
+    .oneLine {
+        height: 30px;
+        display: flex;
+        align-items: center;
     }
-  }
-
-  .description {
-    padding: 5px;
-    color: goldenrod;
-  }
+    .name {
+        .oneLine();
+    }
+    .effects {
+        div {
+            .oneLine()
+        }
+    }
+    .description {
+        padding: 5px;
+        color: goldenrod;
+    }
 }
 
 .attribute {
-  margin: 0 5px;
-  display: inline-block;
+    margin: 0 5px;
+    display: inline-block;
+    width: 80px;
+    display: flex;
+    justify-content: space-between;
 }
