--- a/frontend/web/src/components/game/scene/scene.less
+++ b/frontend/web/src/components/game/scene/scene.less
@@ -1,13 +1,4 @@
-
-.sceneWrapper{
-    height: 100%;
-    width: 100%;
-    background: darkslategray;
-    overflow: scroll;
-    position: absolute;
-}
-
-.scene{
-    width: 2000px;
-    height: 2000ps;
+.stage{
+    border-radius: 50%;
+    border: 1px solid #aaaaaa;
 }
