--- a/frontend/web/src/index.css
+++ b/frontend/web/src/index.css
@@ -1,4 +1,6 @@
-
-html, body, :global(#root) {
-  height: 100%;
+html,
+body,
+:global(#root) {
+    height: 100%;
+    font-family: "Monospaced Number", "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
