opt；scene opt:abiity

--- a/frontend/web/src/components/game/scene/scene.less
+++ b/frontend/web/src/components/game/scene/scene.less
@@ -1,4 +1,14 @@
-.stage{
-    border-radius: 50%;
-    border: 1px solid #aaaaaa;
+.sceneWrapper {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.scene {
+    z-index: 11;
 }
