--- a/frontend/web/src/components/windows/character/character.less
+++ b/frontend/web/src/components/windows/character/character.less
@@ -1,8 +1,10 @@
 .attributes {
+    height: 400px;
+    width: 260px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    height: 100%;
+    // height: 100%;
     .subAttributes {
         width: 120px;
         display: flex;
@@ -25,7 +27,7 @@
     }
 }
 
-.characterWindow {
-    height: 400px;
-    width: 260px;
-}
+// .characterWindow {
+//     height: 400px;
+//     width: 260px;
+// }
