--- a/frontend/web/src/components/windows/gear/gear.less
+++ b/frontend/web/src/components/windows/gear/gear.less
@@ -1,10 +1,7 @@
 .list {
     display: flex;
-    align-items: flex-start;
     flex-wrap: wrap;
-}
-
-.gearWindow {
+    justify-content: space-around;
     width: 200px;
     height: 320px;
 }
