--- a/frontend/web/src/components/windows/window/window.less
+++ b/frontend/web/src/components/windows/window/window.less
@@ -1,8 +1,6 @@
 @border-color: grey;
 @titleBarHeight: 30px;
 .window {
-    height: 200px;
-    width: 300px;
     border: 2px @border-color solid;
     background-color: black;
     display: flex;
@@ -22,5 +20,7 @@
 }
 
 .content {
-    height: calc(~'100%' - @titleBarHeight);
+    // // height: calc(~'100%' - @titleBarHeight); 
+    // height: 200px;
+    // width: 300px;
 }
