--- a/frontend/web/src/components/windows/ability/ability.less
+++ b/frontend/web/src/components/windows/ability/ability.less
@@ -3,23 +3,33 @@
     width: 600px;
     height: 400px;
     .abilityList {
-        padding-left: 10px;
         width: 120px;
         overflow-x: hidden;
-        border-right: 1px solid white;
-        min-height: 400px;
-        // overflow-y: scroll;
-
-        .abilityItem{
-            margin-top: 5px;
-            height: 20px;
+        border-right: 1px solid grey;
+        min-height: 400px; // overflow-y: scroll;
+        .item {
+            padding: 5px 10px;
+            height: 30px;
+            line-height: 20px;
             cursor: pointer;
-            font-size: 18px;
+            font-size: 16px;
+        }
+        .abilityItem {
+            .item();
+            &:hover {
+                color: black;
+                background: rgb(235, 231, 231);
+            }
+        }
+        .selectedAbilityItem {
+            .item();
+            color: black;
+            font-weight: bold;
+            background: rgb(235, 231, 231);
         }
     }
     .abilityDetail {
         width: 400px;
-        overflow-x: hidden;
-        // overflow-y: scroll;
+        overflow-x: hidden; // overflow-y: scroll;
     }
 }
