bug fix; opting inventory & gear

--- a/frontend/web/src/components/windows/gear/gear.less
+++ b/frontend/web/src/components/windows/gear/gear.less
@@ -1,7 +1,6 @@
 .list {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: column;
     width: 200px;
-    height: 320px;
+    // height: 320px;
 }
