--- a/frontend/web/src/components/shared/field/field.less
+++ b/frontend/web/src/components/shared/field/field.less
@@ -5,7 +5,8 @@
 
 .field {
   @smallBorder: solid 1px #aaaaaa;
-  display: inline-block;
+  display:flex;
+  justify-content: center;
   position: relative;
   height: 25px;
   margin: 2px;
@@ -17,7 +18,6 @@
   }
 
   .center {
-    min-width: 50px;
     height: 25px;
     line-height: 25px;
     padding: 0 2px;
