reorg and init login

--- a/frontend/web/src/routes/game/game.less
+++ b/frontend/web/src/routes/game/game.less
@@ -1,6 +1,6 @@
 .area {
-  width: 100%;
-  position: relative;
+//   width: 100%;
+//   position: relative;
   color: silver;
   // padding: 10px;
 }
