--- a/frontend/web/src/index.css
+++ b/frontend/web/src/index.css
@@ -4,3 +4,19 @@ body,
     height: 100%;
     font-family: "Monospaced Number", "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+input,
+button {
+    border: none;
+    border-radius: 0;
+}
+
+input:focus, button:focus{
+    outline: none;
+}
+
+:global(.page) {
+    /* height: 100%;
+    width: 100%; */
+    display: flex;
+}
