--- a/frontend/web/src/routes/index.less
+++ b/frontend/web/src/routes/index.less
@@ -2,6 +2,8 @@
 .layout {
     height: 100%;
     min-width: 1000px;
+    display: flex;
+    flex-direction: column;
 }
 
 .content {
@@ -18,6 +20,10 @@
 
 .footer,
 .header {
+    padding-left: 20px;
+    display: flex;
+    align-items: center;
+    height: 30px;
     background-color: #222;
     color: @font-color;
 }
