--- a/frontend/web/src/routes/character/characterSelect/characterSelect.less
+++ b/frontend/web/src/routes/character/characterSelect/characterSelect.less
@@ -1,97 +1,99 @@
 .page {
-    padding: 80px 20%;
     overflow-y: scroll;
-    .controls {
-        height: 40px;
-        display: flex;
-        flex-direction: row;
-        margin-left: auto;
-        margin-right: auto;
-        justify-content: space-between;
-        align-items: center;
-        .controlsLeft {
-            // justify-self: flex-start;
-        }
-        .controlsRight {
-            // justify-self: flex-end;
-            text-align: right;
-        }
-        .control {
-            height: 30px;
-            line-height: 28px;
-            width: 100px;
-        }
-        .button {
-            .control();
-            cursor: pointer;
-            text-align: center;
-            border: 1px solid silver;
-            &:hover {
-                background: silver;
+    .content {
+        padding: 80px 20%;
+        .controls {
+            height: 40px;
+            display: flex;
+            flex-direction: row;
+            margin-left: auto;
+            margin-right: auto;
+            justify-content: space-between;
+            align-items: center;
+            .controlsLeft {
+                // justify-self: flex-start;
             }
-        }
-        .display {
-            .control();
-        }
-    }
-    .cards {
-        // max-width: 60%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        margin-left: auto;
-        margin-right: auto;
-        .card {
-            height: 180px;
-            width: 120px;
-            border: 1px solid silver;
-            .create {
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                .plus {
-                    border: 1px dashed silver;
-                    width: 50px;
-                    height: 50px;
-                    line-height: 50px;
-                    text-align: center;
-                    font-size: 50px;
-                    position: relative;
-                    color: #ccc;
-                    opacity: 0.6;
-                    &:before {
-                        content: " ";
-                        display: block;
-                        width: 24px; // height: 8px;
-                        border-color: #ccc;
-                        border-top: 4px solid;
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        margin: -2px 0 0 -12px;
-                    }
-                    &:after {
-                        content: " ";
-                        display: block; // width: 8px;
-                        height: 24px;
-                        border-color: #ccc;
-                        border-left: 4px solid;
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        margin: -12px 0 0 -2px;
-                    }
-                    &:hover {
-                        opacity: 1;
-                    }
+            .controlsRight {
+                // justify-self: flex-end;
+                text-align: right;
+            }
+            .control {
+                height: 30px;
+                line-height: 28px;
+                width: 100px;
+            }
+            .button {
+                .control();
+                cursor: pointer;
+                text-align: center;
+                border: 1px solid silver;
+                &:hover {
+                    background: silver;
                 }
             }
-            .detail {
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+            .display {
+                .control();
+            }
+        }
+        .cards {
+            // max-width: 60%;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            margin-left: auto;
+            margin-right: auto;
+            .card {
+                height: 180px;
+                width: 120px;
+                border: 1px solid silver;
+                .create {
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    .plus {
+                        border: 1px dashed silver;
+                        width: 50px;
+                        height: 50px;
+                        line-height: 50px;
+                        text-align: center;
+                        font-size: 50px;
+                        position: relative;
+                        color: #ccc;
+                        opacity: 0.6;
+                        &:before {
+                            content: " ";
+                            display: block;
+                            width: 24px; // height: 8px;
+                            border-color: #ccc;
+                            border-top: 4px solid;
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            margin: -2px 0 0 -12px;
+                        }
+                        &:after {
+                            content: " ";
+                            display: block; // width: 8px;
+                            height: 24px;
+                            border-color: #ccc;
+                            border-left: 4px solid;
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            margin: -12px 0 0 -2px;
+                        }
+                        &:hover {
+                            opacity: 1;
+                        }
+                    }
+                }
+                .detail {
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
             }
         }
     }
