--- a/frontend/web/src/index.css
+++ b/frontend/web/src/index.css
@@ -2,6 +2,7 @@ html,
 body,
 :global(#root) {
     height: 100%;
+    color: silver;
     font-family: "Monospaced Number", "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
