--- a/frontend/web/src/components/shared/tips/tips.less
+++ b/frontend/web/src/components/shared/tips/tips.less
@@ -18,7 +18,7 @@
         border-radius: 0;
         padding: 0;
         font-size: 13px;
-        color: white;
+        // color: white;
       }
     }
   }
