--- a/frontend/web/src/routes/character/characterSelect/characterSelect.less
+++ b/frontend/web/src/routes/character/characterSelect/characterSelect.less
@@ -29,6 +29,7 @@
                 border: 1px solid silver;
                 &:hover {
                     background: silver;
+                    color: black;
                 }
             }
             .display {
@@ -61,6 +62,7 @@
                         position: relative;
                         color: #ccc;
                         opacity: 0.6;
+                        cursor: pointer;
                         &:before {
                             content: " ";
                             display: block;
@@ -93,6 +95,13 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    .badge {
+                        opacity: 0.6;
+                        cursor: pointer;
+                        &:hover {
+                            opacity: 1;
+                        }
+                    }
                 }
             }
         }
