--- a/frontend/web/src/routes/character/characterSelect/characterSelect.less
+++ b/frontend/web/src/routes/character/characterSelect/characterSelect.less
@@ -1,7 +1,10 @@
 .page {
     overflow-y: scroll;
     .content {
-        padding: 80px 20%;
+        padding: 80px 0;
+        width: 870px;
+        margin-left: auto;
+        margin-right: auto;
         .controls {
             height: 40px;
             display: flex;
@@ -41,8 +44,7 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            margin-left: auto;
-            margin-right: auto;
+            justify-content: space-between;
             .card {
                 height: 180px;
                 width: 120px;
